Add an index to README.md. Mention a simplification for the area enclosed by a path.